# streamline-node-sdk

./: .eslintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Makefile  NOTICE  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  integration.yml  release.yml
examples/: README.md  admin-usage.ts  agent-memory.ts  basic-usage.ts  circuit-breaker.ts  query-usage.ts  schema-registry.ts  security.ts
native/: Cargo.toml  README.md
native/src/: lib.rs
src/: admin.ts  ai.ts  auth.ts  circuit-breaker.ts  client.ts  config.ts  consumer.ts  embedded.ts  index.ts  metrics.ts  producer.ts  schema-producer.ts  schema.ts  serializers.ts  telemetry.ts  tls.ts  traced.ts  types.ts  verifier.ts
src/__tests__/: admin.test.ts  auth.test.ts  circuit-breaker.test.ts  client.test.ts  config.test.ts  conformance.test.ts  consumer.test.ts  metrics.test.ts  moonshot-clients.test.ts  producer.test.ts  schema-producer.test.ts  tls.test.ts  types.test.ts  validation.test.ts
src/moonshot/: attestation.ts  branches-admin.ts  contracts.ts  http.ts  index.ts  memory.ts  search.ts
testcontainers/: README.md  package.json  tsconfig.json
testcontainers/src/: StreamlineContainer.ts  index.ts
