[package]
name = "streamline-node-native"
version = "0.2.0"
edition = "2021"
description = "N-API native bindings for embedded Streamline"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2"
